Memory leak from ClassPathDirEntry::_dir

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 20
    • Affects Version/s: 8, 11, 17, 19, 20
    • Component/s: hotspot
    • b23

      Colleague Justin King (jcking@google.com) made LeakSanitizer working with HotSpot, and identified a memory leak. ClassPathDirEntry does not deallocate memory allocated in its constructor, resulting in a memory leak. This seems a long-standing bug that exists in JDK 8 or earlier.

            Assignee:
            Man Cao
            Reporter:
            Man Cao
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: