8296347: Memory leak from ClassPathDirEntry::_dir